test/classes/bradc/weirdinit.good
Error: Invalid class constructor (weirdinit.chpl:7)
