test/classes/bradc/weirdinit.chpl
class pair {
  var x: integer;
  var y: float;
}

function main() {
  var a: pair = a();
  writeln("Shouldn't that line have generated an error?");
}
